--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>React Github Wiever</title>
   </head>
   <body>
 
     <div class="container">
-      <div class="row">
-        <div id="app"></div>
-      </div>
+        <div id="app" class="row"></div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
