--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <div class="container">
-        <div id="app" class="row"></div>
+        <div id="app"></div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
